[tool.poetry]
name = "ug"
version = "0.1"
description = "Manage UG groups"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
include = ["*/**/*.py"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
