[tool.poetry]
name = "kthutils"
version = "0.1"
description = "Various tools for automation at KTH"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
include = ["*/**/*.py"]

[tool.poetry.dependencies]
python = "^3.8"
weblogin = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
