[tool.poetry]
name = "kthutils"
version = "0.2"
description = "Various tools for automation at KTH"
authors = ["Daniel Bosk <dbosk@kth.se>"]
license = "MIT"
include = ["*/**/*.py"]

[tool.poetry.scripts]
kthutils = "kthutils.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
weblogin = "^1.5"
cachetools = "^5.2.0"
typer = "^0.7.0"
typerconf = "^1.1"
rich = "^13.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
